...
        app:layout_constraintTop_toTopOf="parent"
        app:maxImageSize="62dp"
        app:srcCompat="@drawable/ic_outline_account_circle_24"
        app:tint="@null" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="Buildings &gt;"
        android:textColor="#707070"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="SAL"
...
